[package]
name = "orbit-crab"
version = "0.1.0"
authors = ["Kyle J"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
libm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

